--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,8 @@
     }
   },
   "include": [
-    "./config/jest/jest-setup.ts",
+    "./config/jest/setupTests.ts",
     "./src/**/*.ts",
-    "./src/**/*.tsx"
+    "./src/**/*.tsx",
   ]
 }
